Wed Oct 22 22:38:59 2014  CHIKANAGA Tomoyuki  <nagachika@ruby-lang.org>

	* ext/openssl/lib/openssl/ssl.rb (DEFAULT_PARAMS): override
	  options even if OpenSSL::SSL::OP_NO_SSLv3 is not defined.
	  this is pointed out by Stephen Touset. [ruby-core:65711] [Bug #9424]

Wed Oct 22 21:31:56 2014  NAKAMURA Usaku  <usa@ruby-lang.org>

	* common.mk (prelude.c): add dependency to LIB_SRCS because
	  enc/prelude.rb requires lib/unicode_normalize.rb, and it's also
	  requires lib/unicode_normalize/tables.rb (=LIB_SRCS).

Wed Oct 22 21:09:51 2014  Yuki Yugui Sonoda  <yugui@yugui.jp>

	* configure.in (nacl_cv_cpu_nick): fix typo in PNaCl.
	  (XCFLAGS) Add -isystem flag to pnacl and nacl-newlib
	  (CXX): added

	* nacl/GNUmakefile.in (CXX): Added
	  (PPROGRAM): Use clang++ instead of clang because libnacl_io
	  depends on c++ std lib.

Wed Oct 22 21:07:32 2014  Yuki Yugui Sonoda  <yugui@yugui.jp>

	* common.mk (build-ext): avoid trying to build dynamic libraries
	  if configured --with-static-linked-ext.

Wed Oct 22 20:33:33 2014  Martin Duerst <duerst@it.aoyama.ac.jp>

	* common.mk: Fixed grammar in comment [ci skip]

Wed Oct 22 19:18:18 2014  Martin Duerst <duerst@it.aoyama.ac.jp>

	* tool/unicode_norm_gen.rb: Fixed escaping of backslash and
	  double quote ('\\\&' -> "\\\\\\\&"; double quoted string
	  is needed to make \& mean last match; double double
	  backslashes are needed because of two layers of escaping).

Wed Oct 22 18:13:29 2014  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/test-unicode_normalize.rb: as often said, ruby is sometimes built
	  at non-srcdir.

Wed Oct 22 18:12:12 2014  Martin Duerst <duerst@it.aoyama.ac.jp>

	* test/test-unicode_normalize.rb: Adjusted path for test
	  data file (now ../enc/unicode/data/NormalizationTest.txt).

Wed Oct 22 18:07:07 2014  Martin Duerst <duerst@it.aoyama.ac.jp>

	* test/test-unicode_normalize.rb: Removed explicit require,
	  changed method names, adjusted copyright.
